--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ hr {
 }
 
 .cardMain {
+    width: 334px;
     margin-bottom: 40px;
     border: 3px solid;
 }
@@ -62,4 +63,9 @@ hr {
 
 .alignLabel {
     width: 70px;
+}
+
+.footerText {
+    text-align: center;
+    margin: 15px auto;
 }
